k8-manifest/boardgame-qa-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: boardgame
  namespace: boardgame-qa

spec:
  selector:
    app: boardgame

  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
