k8-manifest/boardgame-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boardgame
  namespace: boardgame-qa
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: boardgame
                port:
                  number: 8080
